fix a misspell because I c+p from stackoverflow lmao

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -113,7 +113,7 @@ button:active {
   -ms-overflow-style: none;  /* IE and Edge */
 }
 
-#content::-webkit-scrollbar {
+#students::-webkit-scrollbar {
   display: none; /* Chrome and Chromium based browsers */
 }
 
